--- a/manuals/developer/2_-_Development-environment-tips.html
+++ b/manuals/developer/2_-_Development-environment-tips.html
@@ -116,16 +116,14 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/developer">developer</a> <span class="divider">/</span></li><li class="active">Development Environment</li></ul>
    <h1>Development Environment</h1>
-<p>All work on new features should be done against the master branch. If you want to address bugs then please target the latest release branch, the maintainers will then cherry-pick those changes into the master branch.</p>
-
-<p>The most practical workflow is to send pull-requests to all appropiate branches on Github.</p>
-
-<h3>Get the sources</h3>
+<h3>Get the source</h3>
 
 <pre><code>git clone https://github.com/cobbler/cobbler.git
 </code></pre>
 
 <h3>Decide which branch to work on</h3>
+
+<p>All work on new features should be done against the master branch. If you want to address bugs then please target the latest release branch, the maintainers will then cherry-pick those changes back into the master branch.</p>
 
 <pre><code>git branch -r
 git checkout &lt;branch&gt;
@@ -201,7 +199,7 @@ cobbler test
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Patch-process.html">1 - Patch-process</a></li><li><a href="/manuals/developer/2_-_Development-environment-tips.html">2 - Development-environment-tips</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
   </div>
  </div>
 </div>
