--- a/manuals/developer/index.html
+++ b/manuals/developer/index.html
@@ -118,7 +118,7 @@ var WRInitTime=(new Date()).getTime();
    <h1>Developer Guide</h1>
 <p>Developer documentation is always targeted at the master branch in git.</p>
 
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Patch-process.html">1 - Patch-process</a></li><li><a href="/manuals/developer/2_-_Development-environment-tips.html">2 - Development-environment-tips</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
 
 
      <hr>
@@ -141,7 +141,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Patch-process.html">1 - Patch-process</a></li><li><a href="/manuals/developer/2_-_Development-environment-tips.html">2 - Development-environment-tips</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
   </div>
  </div>
 </div>
