Small fix to manual index

--- a/manuals/index.html
+++ b/manuals/index.html
@@ -118,8 +118,8 @@ var WRInitTime=(new Date()).getTime();
 <h3>User Manuals</h3>
 
 <ul>
-<li><a href="/manuals/2.4.0">2.4.x</a></li>
-<li><a href="/manuals/2.2.3">2.2.x</a></li>
+<li><a href="/manuals/2.4.0">User Manual 2.4.x</a></li>
+<li><a href="/manuals/2.2.3">User Manual 2.2.x</a></li>
 </ul>
 
 
