Remove empty chapter which should be in the developer docs anyway.

--- a/manuals/developer/1_-_Patch-process.html
+++ b/manuals/developer/1_-_Patch-process.html
@@ -161,7 +161,7 @@ within reason.</p>
 
 <ul>
 <li>always use under_scores, not camelCase</li>
-<li>always spaces, not tabs</li>
+<li>always four (4) spaces, not tabs</li>
 <li>avoid one line if statements</li>
 <li>keep things simple -- make sure everyone can read and     understand your code -- avoid "magic" such as very
 complex list comprehensions.   The audience for Cobbler     includes folks with a wide range of programming skills and
