--- a/manuals/2.2.3/Appendix/A_-_S390_Support.html
+++ b/manuals/2.2.3/Appendix/A_-_S390_Support.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Cobbler development team" />
 
-   <title>Tips For RHN</title>
+   <title>Cobbler Manual</title>
 
    <!-- CSS -->
    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
@@ -114,43 +114,120 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrap" class="container">
  <div class="row">
   <div class="span8">
-<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.2.3">2.2.3</a> <span class="divider">/</span></li><li><a href="/manuals/2.2.3/Appendix">Appendix</a> <span class="divider">/</span></li><li class="active">Tips For RHN</li></ul>
-   <h1>Tips For RHN</h1>
-<p>If you're deploying RHEL, there are a few extra kickstart and Cobbler tricks you can employ to make provisioning a snap, all consolidated in one place...</p>
+<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.2.3">2.2.3</a> <span class="divider">/</span></li><li><a href="/manuals/2.2.3/Appendix">Appendix</a> <span class="divider">/</span></li><li class="active">Cobbler Manual</li></ul>
+   <h1>Cobbler Manual</h1>
+<h3>Introduction</h3>
 
-<h3>Importing</h3>
+<p>Cobbler includes support for provisioning Linux on virtualized guests under z/VM, the System z hypervisor.</p>
 
-<p>Download the DVD ISO's for RHN hosted.</p>
+<h3>Quickstart Guide</h3>
 
-<p>Then use "cobbler import" to import the ISO's to get an install tree.</p>
+<p>To begin, you need to first configure a Cobbler server.  Cobbler can be run on any Linux system accessible by the mainframe, including an x86 system or another System z guest.  This server's primary responsibility is to host the Linux install tree(s) remotely, and maintain information about clients accessing it.  For detailed instructions on configuring the Cobbler server, see:</p>
 
-<h3>Registering To RHN</h3>
+<pre><code> https://fedorahosted.org/cobbler/UserDocumentation
+</code></pre>
 
-<p>RHEL has a tool installed called rhnreg_ks that you may not be familiar with. It's what you call in the %post of a kickstart file to make a system automatically register itself with Satellite or the RHN Hosted offering.</p>
+<p>We will assume static networking is used for System z guests.</p>
 
-<p>You may want to read up on rhnreg_ks for all the options it provides, but Cobbler ships with a snippet ("redhat_register") that can help you register systems. It should be in the /var/lib/cobbler/kickstarts/sample*.ks files by default, for you to look at. It is configured by various settings in /etc/cobbler/settings</p>
+<p>After the Cobbler server is running, and you have imported at least one s390x install tree, you can customize the default kickstart template.  Cobbler provides a sample kickstart template that you can start with called /var/lib/cobbler/kickstarts/sample.ks.  You will want to copy this sample, and modify it by adding the following snippet in %post:</p>
 
-<h3>Authenticating XMLRPC/Web users against Satellite / Spacewalk's API</h3>
+<pre><code>$SNIPPET('post_s390_reboot')
+</code></pre>
 
-<p>In /etc/cobbler/modules.conf, if you are using authn_spacewalk for authentication, Cobbler can talk to Satellite (5.3 and later) or Spacewalk for authentication. Authentication is cleared when users have the role "org_admin", or "kickstart_admin" roles. Authorization can later be supplied via cobbler modules as normal, for example, authz_allowall (default) or authn_ownership, but should probably be left as authz_allowall.</p>
+<p>Next, it's time to add a system to Cobbler.  Unlike traditional PXE, where unknown clients are identified by MAC address, zPXE uses the z/VM user ID to distinguish systems.  For example, to add a system with z/VM user ID ''z01'':</p>
 
-<p>See CustomizableSecurity</p>
+<pre><code>cobbler system add --name z01 \
+--hostname=z01.example.com --ip-address=10.10.10.100 --subnet=10.10.10.255 --netmask=255.255.255.0 \
+--name-servers=10.10.10.1 --name-servers-search=example.com:example2.com \
+--gateway=10.10.10.254 --kopts="LAYER2=0 NETTYPE=qeth PORTNO=0 cms=None \
+HOSTNAME=z01.example.com IPADDR=10.10.10.100 SUBCHANNELS=0.0.0600,0.0.0601,0.0.0602 \
+MTU=1500 BROADCAST=10.10.10.255 SEARCHDNS=example.com:example2.com \
+NETMASK=255.255.255.0 DNS=10.10.10.1 PORTNAME=UNASSIGNED \
+DASD=100-101,200 GATEWAY=10.10.10.254 NETWORK=10.10.10.0"
+</code></pre>
 
-<p>If you are using a copy of Cobbler that came bundled with Spacewalk or Satellite Server, don't change these settings, as you will break Spacewalk/Satellite's ability to converse with Cobbler.</p>
+<p>Most of the options to ''cobbler system add'' are self explanatory network parameters.  They are fully explained in the cobbler man page (see ''man cobbler'').  The --kopts option is used to specify System z specific kernel options needed by the installer.  These are the same parameters found in the PARM or CONF file of a traditional installation, and in fact will be placed into a PARM file used by zPXE.  For any parameters not specified with --kopts, the installer will prompt you during kickstart in the 3270 console.  For a truly non-interactive installation, make sure to specify at least the parameters listed above.</p>
 
-<h3>Installation Numbers</h3>
+<p>Now that you've added a system to Cobbler, it's time to configure zPXE, the Cobbler-specific System z PXE emulator client, which ships with Cobbler.  zPXE is designed to replace PROFILE EXEC for a System z guest.  Alternatively, you can simply call ZPXE EXEC from your existing PROFILE EXEC.  The following example assumes the z/VM FTP server is running; however, you can also FTP from z/VM to the cobbler server.  Transfer zpxe.rexx to z/VM:</p>
 
-<p>See the section called "RHEL Keys" on the KickstartSnippets page. It's a useful way to store all of your install keys in cobbler and use them automatically as needed.</p>
+<pre><code># cd /var/lib/cobbler
+# ftp zvm.example.com
+==&gt; ascii
+==&gt; put zpxe.rexx zpxe.exec
+==&gt; bye
+</code></pre>
 
-<h3>Repository Mirroring</h3>
+<p>Next, logon to z/VM, and backup the current PROFILE EXEC and rename ZPXE EXEC:</p>
 
-<p>Cobbler has limited/experimental support for mirroring RHN-channels, see the cobbler manpage for details. Basically you just specify a "cobbler repo add" with the path "rhn://channel-name". This requires a version of yum-utils 1.0.4 or later, installed on the cobbler boot server. Only the arch of the cobbler server can be mirrored. See ManageYumRepos.</p>
+<pre><code>==&gt; rename profile exec a = execback =
+==&gt; rename zpxe exec a profile = =
+</code></pre>
 
-<p>If you require better mirroring support than what yum provides, please consider Red Hat Satellite Server.</p>
+<p>Finally, you need to create a ZPXE CONF to specify the cobbler server hostname, as well as the default disk to IPL.  Use xedit to create this file.  It has only two lines.</p>
 
-<h3>Other Tricks</h3>
+<pre><code>==&gt; xedit zpxe conf a
 
-<p>Feel free to add your own here!</p>
+00000 * * * Top of File * * *
+00001 HOST example.server.com
+00002 IPLDISK 100
+00003 * * * End of File * * *
+</code></pre>
+
+<p>zPXE is now configured.  The client will attempt to contact the server at each logon.  If there is a system record available, and it is set to be reinstalled, zPXE will download the necessary files and begin the kickstart.</p>
+
+<p>To schedule an install, run the following command on the cobbler server:</p>
+
+<pre><code>cobbler system edit --name z01 --netboot-enabled 1 --profile RHEL-5-Server-U1-s390x
+</code></pre>
+
+<h3>Internals: How It Works</h3>
+
+<p>Now let's take a look at how zPXE works.  First, it defines a 50 MB VDISK, which is large enough to hold a kernel and initial RAMdisk, and enough free space to convert both files to 80-character width fixed record length.  Since VDISK is used, zPXE does not require any writeable space on the user's 191(A) disk.  This makes it possible to use zPXE as a read-only PROFILE EXEC shared among many users.</p>
+
+<p>Next, the client uses the z/VM TFTP client to contact the server specified in ZPXE CONF.  It attempts to retrieve, in the following order:</p>
+
+<ol>
+<li>}, if found, the following files will be downloaded:
+
+<ul>
+<li>}</li>
+<li>}</li>
+</ul>
+</li>
+<li>}</li>
+</ol>
+
+
+<p>When netboot is enabled on the cobbler server, it places a file called s_''systemname'' (where ''systemname'' = z/VM user ID) into /var/lib/tftpboot/s390x/ which contains the following lines:</p>
+
+<pre><code>/images/RHEL-5-Server-U3-s390x/kernel.img
+/images/RHEL-5-Server-U3-s390x/initrd.img
+ks=http://cobbler.example.com/cblr/svc/op/ks/system/z01
+</code></pre>
+
+<p>The file parameter file (s<em>''systemname''</em>parm) is intended for kernel options, and may also contain network-specific information for the guest. The config file (s<em>''systemname''</em>conf) is intended for CMS specific configuration. It is currently unused, as the parm file contains everything necessary for install. However, it is maintained as a placeholder for additional functionality.</p>
+
+<p>A sample parameter file looks like this:</p>
+
+<pre><code>LAYER2=0 NETTYPE=qeth PORTNO=0 ip=False MTU=1500
+SEARCHDNS=search.example.com DNS=192.168.5.1 GATEWAY=192.168.5.254
+DASD=100-101,200 NETWORK=192.168.5.0 RUNKS=1 cmdline root=/dev/ram0
+HOSTNAME=server.example.com IPADDR=192.168.5.2
+SUBCHANNELS=0.0.0600,0.0.0601,0.0.0602 BROADCAST=192.168.5.255
+NETMASK=255.255.255.0 PORTNAME=UNASSIGNED ramdisk_size=40000 ro cms
+</code></pre>
+
+<p>NOTE: The parameter file has several restrictions on content.  The most notable restrictions are listed below.  For a complete list of restrictions, refer to http://www.redhat.com/docs/en-US/Red_Hat_Enterprise_Linux/5/html/Installation_Guide/s1-s390-steps-vm.html.</p>
+
+<ul>
+<li>The parameter file should contain no more than 80 characters per line.</li>
+<li>The VM reader has a limit of 11 lines for the parameter file (for a total of 880 characters).</li>
+</ul>
+
+
+<p>If there is no system record available on the server, or if netboot is not enabled, zPXE will attempt to retrieve the file profile_list, containing a list of all available install trees.  These are presented in the form of a menu which is displayed at each logon.  If a profile is chosen, zPXE downloads the appropriate kernel and initial RAMdisk and begins the installation.  Note that since these are generic profiles, there is no network-specific information available for this guest, so you will be prompted for this information in the 3270 console during installation.</p>
+
+<p>If you press Enter at the menu without choosing a profile, zPXE will IPL the default disk specified in ZPXE CONF.  If the guest is XAUTOLOG'd (logged on disconnected by another user), zPXE will check for the presence of a system record.  If not found, the default disk is IPL'd with no profile list shown.</p>
 
      <hr>
      <div id="disqus_thread"></div>
@@ -172,7 +249,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/Appendix/A_-_API.html">A - API</a></li><li><a href="/manuals/2.2.3/Appendix/B_-_S390_Support.html">B - S390 Support</a></li><li><a href="/manuals/2.2.3/Appendix/C_-_Power-PC_Support.html">C - Power-PC Support</a></li><li><a href="/manuals/2.2.3/Appendix/D_-_Tips_for_RHN.html">D - Tips for RHN</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.2.3/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.2.3/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li></ul></div>
   </div>
  </div>
 </div>
