--- a/manuals/2.2.3/Appendix/B_-_Power-PC_Support.html
+++ b/manuals/2.2.3/Appendix/B_-_Power-PC_Support.html
@@ -396,7 +396,7 @@ Fedora rawhide at
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/Appendix/A_-_API.html">A - API</a></li><li><a href="/manuals/2.2.3/Appendix/B_-_S390_Support.html">B - S390 Support</a></li><li><a href="/manuals/2.2.3/Appendix/C_-_Power-PC_Support.html">C - Power-PC Support</a></li><li><a href="/manuals/2.2.3/Appendix/D_-_Tips_for_RHN.html">D - Tips for RHN</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.2.3/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.2.3/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.2.3/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li></ul></div>
   </div>
  </div>
 </div>
