Update to the 2.4.3 manual

--- a/manuals/2.4.0/1/1_-_Release_Notes.html
+++ b/manuals/2.4.0/1/1_-_Release_Notes.html
@@ -117,6 +117,24 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0">2.4.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.4.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">What's New</li></ul>
    <h1>What's New</h1>
+<h2>2.4.3</h2>
+
+<h3>Feature improvements</h3>
+
+<p>Improve support for ESXi when using updated sources
+Add support for SLES 12 to distro_signatures
+Add support for Oracle Enterprise Linux to distro_signatures</p>
+
+<h3>Bugfixes</h3>
+
+<p>Manual page correction regarding the use of the --server parameter
+Minor corrections to the build MANIFEST
+Fix a SyntaxError in Koan / OVZ install</p>
+
+<h3>Upgrade notes</h3>
+
+<p>None.</p>
+
 <h2>2.4.2</h2>
 
 <h3>Feature improvements</h3>
