Updates to manuals

--- a/manuals/2.4.0/1/1_-_Release_Notes.html
+++ b/manuals/2.4.0/1/1_-_Release_Notes.html
@@ -121,15 +121,21 @@ var WRInitTime=(new Date()).getTime();
 
 <h3>Feature improvements</h3>
 
-<p>Improve support for ESXi when using updated sources
-Add support for SLES 12 to distro_signatures
-Add support for Oracle Enterprise Linux to distro_signatures</p>
+<ul>
+<li>Improve support for ESXi when using updated sources</li>
+<li>Add support for SLES 12 to distro_signatures</li>
+<li>Add support for Oracle Enterprise Linux to distro_signatures</li>
+</ul>
+
 
 <h3>Bugfixes</h3>
 
-<p>Manual page correction regarding the use of the --server parameter
-Minor corrections to the build MANIFEST
-Fix a SyntaxError in Koan / OVZ install</p>
+<ul>
+<li>Manual page correction regarding the use of the --server parameter</li>
+<li>Minor corrections to the build MANIFEST</li>
+<li>Fix a SyntaxError in Koan / OVZ install</li>
+</ul>
+
 
 <h3>Upgrade notes</h3>
 
