--- a/manuals/2.6.0/Appendix/F_-_System_Retirement.html
+++ b/manuals/2.6.0/Appendix/F_-_System_Retirement.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Cobbler development team" />
 
-   <title>Cobbler Manual</title>
+   <title>System retirement</title>
 
    <!-- CSS -->
    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
@@ -116,47 +116,101 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrap" class="container">
  <div class="row">
   <div class="span8">
-<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/Appendix">Appendix</a> <span class="divider">/</span></li><li class="active">Cobbler Manual</li></ul>
-   <h1>Cobbler Manual</h1>
-<h2>Clonezilla live integration</h2>
+<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/Appendix">Appendix</a> <span class="divider">/</span></li><li class="active">System retirement</li></ul>
+   <h1>System retirement</h1>
+<h2>Using DBAN with Cobbler to automate system retirement</h2>
 
-<p>Since many of us need to support non-linux systems in addition to
-Linux systems, some facility for support of these systems is
-helpful - especially if your dhcp server is pointing pxe boots to
-your cobbler server. PXE booting a clonezilla live CD as an option
-under cobbler provides a unified starting point for all system
-installation tasks.</p>
+<h3>Introduction</h3>
 
-<h2>Step-by-step (as of 2.2.2)</h2>
+<p>The following method details using <a href="http://dban.sourceforge.net/">DBAN</a> with Cobbler to create a PXE boot image that will securely wipe the disk of the system being retired. This could also be used if you are shipping a disk back to the manufacturer and wanted to ensure all data is "securely" wiped.</p>
 
-<p> \1. Download clonezilla live image from here here:
- <a href="http://clonezilla.org/downloads.php">http://clonezilla.org/downloads.php</a>
- . I used the ubuntu based "experimental" version because the Debian
- based clonezilla's don't have necessary network drivers for many
- Dell servers.</p>
+<h3>Steps</h3>
 
-<p>\2. Unpack the zip file to a location on the machine, and run an add the distribution
-  cobbler distro add  --name=clonezilla1-2-22-37 --arch=x86_64 --breed=other --os-version=other --boot-files="'$img_path/filesystem.squashfs'='<path_to_your_folder>/live/filesystem.squashfs'" --kernel=<path_to_your_folder>/live/vmlinuz --initrd=<path_to_your_folder>/live/initrd.img</p>
+<h4>DBAN 2.2.6</h4>
 
-<p>\3. Set up the kickstart kernel options needed for booting to at least:
-  nomodeset edd=on ocs_live_run=ocs-live-general ocs_live_keymap=NONE boot=live vga=788 noswap noprompt nosplash ocs_live_batch=no ocs_live_extra_param ocs_lang=en_US.UTF-8 ocs_lang=None nolocales config fetch=tftp://<Your_TFTP_ServerIP>/images/<your_Profile_NAME>/filesystem.squashfs</p>
+<p>Retrieve the extra loader parts that DBAN 2.2.6 needs:</p>
 
-<p>\4. You should then be able to create a profile for the clonezilla distro and then add to the kernel options, and be able to customize the startup procedure from there using the clonezilla docs.</p>
+<pre><code>cobbler get-loaders
+</code></pre>
 
-<p>\5. Run "cobbler sync" to set up the template for the systems you need.</p>
+<p>Download DBAN:</p>
 
-<h2>Limitations and work needed</h2>
+<pre><code>wget -O /tmp/dban-2.2.6_i586.iso http://prdownloads.sourceforge.net/dban/dban-2.2.6_i586.iso
+</code></pre>
 
-<p>\1. I've seen the download of the squashfs skipped on more than one
- occaision, resulting in a kernel panic. Not sure why this happens,
- but trying again fixes the problem (or could just be because I'm
- still experimenting too much).</p>
+<p>Mount the ISO and copy the kernel image file and (optionally) the boot configuration file:</p>
 
-<p>\2. Would be nice if clonezilla UI was integrated into cobbler
- somewhat (i.e. it knew the IP of the server saving the images and
- maybe had an ssh key so it could get access without a password).</p>
+<pre><code>mount -o loop,ro /tmp/dban-2.2.6_i586.iso /mnt
+mkdir -p /opt/cobbler/dban-2.2.6
+cp -p /mnt/dban.bzi /opt/cobbler/dban-2.2.6/
+cp -p /mnt/isolinux.cfg /opt/cobbler/dban-2.2.6/
+chmod -x /opt/cobbler/dban-2.2.6/*
+umount /mnt
+</code></pre>
 
-<p>\3. <strong>Still very experimental.</strong></p>
+<p>Add the DBAN distro and profile to Cobbler.  Run sync to copy the loaders into place:</p>
+
+<pre><code>cobbler distro add --name=DBAN-2.2.6-i586 --kernel=/opt/cobbler/dban-2.2.6/dban.bzi \
+  --initrd=/opt/cobbler/dban-2.2.6/dban.bzi --kopts="nuke=dwipe silent"
+cobbler profile add --name=DBAN-2.2.6-i586 --distro=DBAN-2.2.6-i586
+cobbler sync
+</code></pre>
+
+<h4>DBAN 1.0.7</h4>
+
+<p>Download DBAN:</p>
+
+<pre><code>wget -O /tmp/dban-1.0.7_i386.iso http://prdownloads.sourceforge.net/dban/dban-1.0.7_i386.iso
+</code></pre>
+
+<p>Mount the ISO and copy the floppy disk image file:</p>
+
+<pre><code>mount -o loop,ro /tmp/dban-1.0.7_i386.iso /mnt
+cp -p /mnt/dban_1_0_7_i386.ima /tmp/
+umount /mnt
+</code></pre>
+
+<p>Mount the floppy disk image file and copy the kernel image file, initial ram disk, and (optionally) the boot configuration file:</p>
+
+<pre><code>mount -o loop,ro /tmp/dban_1_0_7_i386.ima /mnt
+mkdir -p /opt/cobbler/dban-1.0.7
+cp -p /mnt/initrd.gz /opt/cobbler/dban-1.0.7/
+cp -p /mnt/kernel.bzi /opt/cobbler/dban-1.0.7/
+cp -p /mnt/syslinux.cfg /opt/cobbler/dban-1.0.7/
+chmod -x /opt/cobbler/dban-1.0.7/*
+umount /mnt
+</code></pre>
+
+<p>Add the DBAN distro and profile to Cobbler:</p>
+
+<pre><code>cobbler distro add --name=DBAN-1.0.7-i386 --kernel=/opt/cobbler/dban-1.0.7/kernel.bzi \
+  --initrd=/opt/cobbler/dban-1.0.7/initrd.gz --kopts="root=/dev/ram0 init=/rc nuke=dwipe floppy=0,16,cmos"
+cobbler profile add --name=DBAN-1.0.7-i386 --distro=DBAN-1.0.7-i386
+</code></pre>
+
+<h3>Test</h3>
+
+<ol>
+<li><p>Add a system to be destroyed:</p>
+
+<p> cobbler system add --name=00:15:c5:c0:05:58 --profile=DBAN-1.0.7-i386</p></li>
+<li><p>Sync cobbler:</p>
+
+<p> cobbler sync</p></li>
+<li><p>Boot the system via PXE. The DBAN menu will pop up. Select the drives and hit F10 to start the wipe.</p></li>
+<li><p>Remove the system from this profile so that you don't accidentally boot and wipe in the future:</p>
+
+<p> cobbler system remove --name=00:15:c5:c0:05:58</p></li>
+</ol>
+
+
+<h3>Notes</h3>
+
+<p>You can setup DBAN to autowipe the system in question by supplying the kernel option of nuke="dwipe --autonuke". We are not doing it in this example because people sometimes only half-read things and it would suck to find out too late that you'd wiped a system you didn't mean to.</p>
+
+<p>It should go without saying that, while it might be a mildly fun prank, you shouldn't set this to be your default pxe boot menu choice. You'll most likely get fired and/or beat up by your fellow employees.</p>
+
+<p>If you do set this profile, it will show up as an option in the PXE menus. If this concerns you, set up a syslinux password by editing the templates in <code>/etc/cobbler</code> to ensure no one walks up to a system and blitzes it involuntarily. An option to keep a profile out of the PXE menu is doable if enough people request it or someone wants to submit a patch...</p>
 
      <hr>
      <div id="disqus_thread"></div>
@@ -178,7 +232,7 @@ installation tasks.</p>
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.6.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.6.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.6.0/Appendix/4_-_Anaconda_Monitoring.html">4 - Anaconda Monitoring</a></li><li><a href="/manuals/2.6.0/Appendix/9_-_Memtest.html">9 - Memtest</a></li><li><a href="/manuals/2.6.0/Appendix/12_-_Booting_Live_CDs.html">12 - Booting Live CDs</a></li><li><a href="/manuals/2.6.0/Appendix/13_-_Clonezilla_Integration.html">13 - Clonezilla Integration</a></li><li><a href="/manuals/2.6.0/Appendix/17_-_System_Retirement.html">17 - System Retirement</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.6.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.6.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.6.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.6.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.6.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.6.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li><li><a href="/manuals/2.6.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li></ul></div>
   </div>
  </div>
 </div>
