--- a/manuals/2.6.0/1_-_About_Cobbler.html
+++ b/manuals/2.6.0/1_-_About_Cobbler.html
@@ -148,7 +148,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.6.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.6.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li><li><a href="/manuals/2.6.0/1/3_-_Distribution_Notes.html">3 - Distribution Notes</a></li><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">3.1 - Nexenta</a></li></ul></ul></div>
   </div>
  </div>
 </div>
