--- a/manuals/2.6.0/1/2_-_Distribution_Support.html
+++ b/manuals/2.6.0/1/2_-_Distribution_Support.html
@@ -547,7 +547,7 @@ var WRInitTime=(new Date()).getTime();
  </tr>
  <tr>
   <td class="span2"></td>
-  <td class="span2">Nexenta 3.1.x</td>
+  <td class="span2">Nexenta 4</td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ban-circle text-error"></i></td>
   <td class="center span1"><i class="icon-wrench"></i></td>
@@ -584,7 +584,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.6.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.6.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li><li><a href="/manuals/2.6.0/1/3_-_Distribution_Notes.html">3 - Distribution Notes</a></li><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">3.1 - Nexenta</a></li></ul></ul></div>
   </div>
  </div>
 </div>
