--- a/manuals/2.6.0/1/3_-_Distribution_Notes.html
+++ b/manuals/2.6.0/1/3_-_Distribution_Notes.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Cobbler development team" />
 
-   <title>What's New</title>
+   <title>Distribution Notes</title>
 
    <!-- CSS -->
    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
@@ -116,35 +116,9 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrap" class="container">
  <div class="row">
   <div class="span8">
-<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">What's New</li></ul>
-   <h1>What's New</h1>
-<h2>2.6.0</h2>
-
-<h3>Features</h3>
-
-<ul>
-<li>We now build RPMs for RHEL/CentOS 6, Fedora 18/19/20, OpenSUSE 12.3/13.1/Factory</li>
-<li>Massive overhaul to python building &amp; packaging infrastructure enabling alternate install prefix</li>
-<li>Initial support for Nexenta 4: distro import and manual PXE booting</li>
-<li>Added support for ESXi 6</li>
-</ul>
-
-
-<h3>Bugfixes</h3>
-
-<ul>
-<li>Lots of code cleanup</li>
-</ul>
-
-
-<h3>Upgrade notes</h3>
-
-<ul>
-<li>Support for python 2.4 (eg. RHEL5) has been dropped, we now require python 2.6+</li>
-</ul>
-
-
-<p>None.</p>
+<ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">Distribution Notes</li></ul>
+   <h1>Distribution Notes</h1>
+<p>This chapter provides distribution specific notes.</p>
 
      <hr>
      <div id="disqus_thread"></div>
@@ -166,7 +140,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/1_-_Release_Notes.html">1 - Release Notes</a></li><li><a href="/manuals/2.6.0/1/2_-_Distribution_Support.html">2 - Distribution Support</a></li><li><a href="/manuals/2.6.0/1/3_-_Distribution_Notes.html">3 - Distribution Notes</a></li><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">3.1 - Nexenta</a></li></ul></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">1 - Nexenta</a></li></ul></div>
   </div>
  </div>
 </div>
