Moved FreeBSD docs

--- a/manuals/2.6.0/1/3/1_-_Nexenta.html
+++ b/manuals/2.6.0/1/3/1_-_Nexenta.html
@@ -258,7 +258,7 @@ kernel<span class="nv">$ </span>/images/nexenta-a-x86_64/platform/i86pc/kernel/a
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">1 - Nexenta</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">1 - Nexenta</a></li><li><a href="/manuals/2.6.0/1/3/2_-_FreeBSD.html">2 - FreeBSD</a></li></ul></div>
   </div>
  </div>
 </div>
