--- a/manuals/2.6.0/1/3_-_Distribution_Notes.html
+++ b/manuals/2.6.0/1/3_-_Distribution_Notes.html
@@ -118,7 +118,9 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">Distribution Notes</li></ul>
    <h1>Distribution Notes</h1>
-<p>This chapter provides distribution specific notes.</p>
+<p>Cobbler was originally written to support Fedora, Red Hat, and derivative distributions such as CentOS or Scientific Linux. Cobbler now works for managing other environments, including mixed environments, occasionally with some limitations. Debian and SuSE support is quite strong, with patches coming in from developers working on those distributions as well.</p>
+
+<p>However, in some cases (especially for newer distribution versions), a little extra work may be required after an import in order to make things work smoothly.</p>
 
      <hr>
      <div id="disqus_thread"></div>
@@ -140,7 +142,7 @@ var WRInitTime=(new Date()).getTime();
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">1 - Nexenta</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.6.0/1/3/1_-_Nexenta.html">1 - Nexenta</a></li><li><a href="/manuals/2.6.0/1/3/2_-_FreeBSD.html">2 - FreeBSD</a></li></ul></div>
   </div>
  </div>
 </div>
