Make release note smore user oriented

--- a/manuals/2.4.0/1/1_-_Release_Notes.html
+++ b/manuals/2.4.0/1/1_-_Release_Notes.html
@@ -131,14 +131,15 @@ var WRInitTime=(new Date()).getTime();
 <ul>
 <li>Add a distro_signature for Ubuntu 14.04</li>
 <li>Add an option to always write DHCP entries regardless of netboot setting</li>
+<li>Improve support for running inside chroot() and/or containers</li>
+<li>Improve performance of the "cobbler sync" operation</li>
 </ul>
 
 
 <h3>Bugfixes</h3>
 
 <ul>
-<li><h1>784. Fix infinite loop in get_file_device_path() in chroot environment</h1></li>
-<li>Improve performance of the "cobbler sync" operation</li>
+<li>Fix infinite loop in get_file_device_path() in chroot environment</li>
 <li>Fixed an Exception in Koans get_insert_script() function</li>
 </ul>
 
